Created the toolbar and added the images of it.
-Downloading the images from Figma template 5 for this portfolio.
-Linked the images with html and added the position and size of them.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <img class="toolbar1" src="img/shape1header.png">
+        <img class="toolbar2" src="img/shape2header.png">
+        <img class="menubar1" src="img/menurectangle.png">
+        <img class="menubar2" src="img/menurectangle.png">
+        <img class="menubar3" src="img/menurectangle.png">
+    </header>
 </body>
 </html>
