Setting up the headline section
-Downloaded the image for the headline section.
-Write the contend of this section.
-Add the styles for this features on the css file.

--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
         <img class="menubar2" src="img/menurectangle.png">
         <img class="menubar3" src="img/menurectangle.png">
     </header>
+    <section class="headline">
+        <h1>Marco Antonio Hincapié Montes</h1>
+        <h5>Hello! I am a software developer! I can help you build a product, feature or website. Take a look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.</h5>
+        <div class="collaboration_buttom">
+            <h6>Start collaboration</h6>
+            <img class="collaboration_buttom2" src="img/collabrectangle.png">
+        </div>
+    </section>
 </body>
 </html>
