--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="navbar">
         <img class="toolbar1" src="img/shape1header.png">
         <img class="toolbar2" src="img/shape2header.png">
         <img class="menubar1" src="img/menurectangle.png">
