--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My_Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="navbar">
-        <img class="toolbar1" src="img/shape1header.png">
-        <img class="toolbar2" src="img/shape2header.png">
-        <img class="menubar1" src="img/menurectangle.png">
-        <img class="menubar2" src="img/menurectangle.png">
-        <img class="menubar3" src="img/menurectangle.png">
-    </header>
-    <section class="headline">
-        <h1>Marco Antonio Hincapié Montes</h1>
-        <h5>Hello! I am a software developer! I can help you build a product, feature or website. Take a look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.</h5>
-        <div class="collaboration_buttom">
-            <h6>Start collaboration</h6>
-            <img class="collaboration_buttom2" src="img/collabrectangle.png">
-        </div>
-    </section>
+    <main class="container">
+        <header class="navbar">
+            <img class="toolbar" src="img/shapeheader.png">
+            <img class="rectangle" src="img/menurectangle.png">
+        </header>
+        <section class="headline">
+            <h1>Marco Antonio Hincapié Montes</h1>
+            <p>Hello! I am a software developer! I can help you build a product, feature or website. Take a look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
+            <div class="collaboration_buttom">
+                <h6>Start collaboration</h6>
+            </div>   
+        </section>
+        <img class="bottomheader" src="img/shapeheader2.png">
+    </main>
 </body>
 </html>
