Made the changes requirement for the linters.
-Modified the style with the linter issues.
-Modified the html adding the alt attribute to the images.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <main class="container">
         <header class="navbar">
-            <img class="toolbar" src="img/shapeheader.png">
-            <img class="rectangle" src="img/menurectangle.png">
+            <img class="toolbar" src="img/shapeheader.png" alt="Shape1">
+            <img class="rectangle" src="img/menurectangle.png" alt="Rectangle">
         </header>
         <section class="headline">
             <h1>Marco Antonio Hincapié Montes</h1>
@@ -24,7 +24,7 @@
                 <h6>Start collaboration</h6>
             </div>   
         </section>
-        <img class="bottomheader" src="img/shapeheader2.png">
+        <img class="bottomheader" src="img/shapeheader2.png" alt="Shape2">
     </main>
 </body>
 </html>
