--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main class="container">
-        <header class="navbar">
-            <img class="toolbar" src="img/shapeheader.png" alt="Shape1">
-            <img class="rectangle" src="img/menurectangle.png" alt="Rectangle">
+        <header>
+            <nav class="navbar">
+                <a href="index.html"><img class="toolbar" src="img/shapeheader.png" alt="Shape1"></a>
+                <img class="rectangle" src="img/menurectangle.png" alt="Rectangle">
+            </nav>
         </header>
         <section class="headline">
             <h1>Marco Antonio Hincapié Montes</h1>
             <p>Hello! I am a software developer! I can help you build a product, feature or website. Take a look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
             <div class="collaboration_buttom">
-                <h6>Start collaboration</h6>
+                <button>Start collaboration</button>
             </div>   
         </section>
         <img class="bottomheader" src="img/shapeheader2.png" alt="Shape2">
-    </main>
 </body>
 </html>
