Created the first card for works section
-Create the html code for the tittle and the first card of the work section.
-Created the style for this card and fixed the problems with the interactions of the buttons.
-Added projects images.

--- a/index.html
+++ b/index.html
@@ -9,22 +9,37 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-        <header>
-            <nav class="navbar">
-                <a href="index.html"><img class="toolbar" src="img/shapeheader.png" alt="Shape1"></a>
-                <img class="rectangle" src="img/menurectangle.png" alt="Rectangle">
-            </nav>
-        </header>
-        <section class="headline">
-            <h1>Marco Antonio Hincapié Montes</h1>
-            <p>Hello! I am a software developer! I can help you build a product, feature or website. Take a look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
-            <div class="collaboration_buttom">
-                <button>Start collaboration</button>
-            </div>   
-        </section>
-        <img class="bottomheader" src="img/shapeheader2.png" alt="Shape2">
+    <header>
+        <nav class="navbar">
+            <a href="index.html"><img class="toolbar" src="img/shapeheader.png" alt="Shape1"></a>
+            <img class="rectangle" src="img/menurectangle.png" alt="Rectangle">
+        </nav>
+    </header>
+    <section class="headline">
+        <h1>Marco Antonio Hincapié Montes</h1>
+        <p>Hello! I am a software developer! I can help you build a product, feature or website. Take a look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
+        <div>
+            <button id="headline-button">Start collaboration</button>
+        </div>   
+    </section>
+    <img class="bottomheader" src="img/shapeheader2.png" alt="Shape2">
+    <section class="works">
+        <h2 class="projecttitle">Projects</h2>
+        <div class="projectdescription">
+            <img src="img/project1.png" alt="PROJECT1">
+            <h3 class="projectname">Project name goes here</h3>
+            <ul class="languages">
+                <li id="html">HTML/CSS</li>
+                <li id="ruby">Ruby on Rails</li>
+                <li id="js">JavaScript</li>
+            </ul>
+            <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+        </div>
+    </section>
+    <section class="aboutme">
+    </section>
 </body>
 </html>
