Created other cads for the following projects.
-Fixed the syntax errors in the CSS file.
-Created other cards projects.
-Added the images for other projects cads.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,59 @@
             </ul>
             <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
         </div>
+        <div class="projectdescription">
+            <img src="img/project2.png" alt="PROJECT2">
+            <h3 class="projectname">Project name goes here</h3>
+            <ul class="languages">
+                <li id="html">HTML/CSS</li>
+                <li id="ruby">Ruby on Rails</li>
+                <li id="js">JavaScript</li>
+            </ul>
+            <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+        </div>
+        <div class="projectdescription">
+            <img src="img/project3.png" alt="PROJECT3">
+            <h3 class="projectname">Project name goes here</h3>
+            <ul class="languages">
+                <li id="html">HTML/CSS</li>
+                <li id="ruby">Ruby on Rails</li>
+                <li id="js">JavaScript</li>
+            </ul>
+            <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+        </div>
+        <div class="projectdescription">
+            <img src="img/project4.png" alt="PROJECT4">
+            <h3 class="projectname">Project name goes here</h3>
+            <ul class="languages">
+                <li id="html">HTML/CSS</li>
+                <li id="ruby">Ruby on Rails</li>
+                <li id="js">JavaScript</li>
+            </ul>
+            <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+        </div>
+        <div class="projectdescription">
+            <img src="img/project5.png" alt="PROJECT5">
+            <h3 class="projectname">Project name goes here</h3>
+            <ul class="languages">
+                <li id="html">HTML/CSS</li>
+                <li id="ruby">Ruby on Rails</li>
+                <li id="js">JavaScript</li>
+            </ul>
+            <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+        </div>
+        <div class="projectdescription">
+            <img src="img/project6.png" alt="PROJECT6">
+            <h3 class="projectname">Project name goes here</h3>
+            <ul class="languages">
+                <li id="html">HTML/CSS</li>
+                <li id="ruby">Ruby on Rails</li>
+                <li id="js">JavaScript</li>
+            </ul>
+            <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+        </div>
     </section>
     <section class="aboutme">
+        
     </section>
 </body>
 </html>
