--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <img src="img/project1.png" alt="PROJECT1">
             <h3 class="projectname">Project name goes here</h3>
             <ul class="languages">
-                <li id="html">HTML/CSS</li>
-                <li id="ruby">Ruby on Rails</li>
-                <li id="js">JavaScript</li>
+                <li class="html">HTML/CSS</li>
+                <li class="ruby">Ruby on Rails</li>
+                <li class="js">JavaScript</li>
             </ul>
             <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
         </div>
@@ -42,9 +42,9 @@
             <img src="img/project2.png" alt="PROJECT2">
             <h3 class="projectname">Project name goes here</h3>
             <ul class="languages">
-                <li id="html">HTML/CSS</li>
-                <li id="ruby">Ruby on Rails</li>
-                <li id="js">JavaScript</li>
+                <li class="html">HTML/CSS</li>
+                <li class="ruby">Ruby on Rails</li>
+                <li class="js">JavaScript</li>
             </ul>
             <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
         </div>
@@ -52,9 +52,9 @@
             <img src="img/project3.png" alt="PROJECT3">
             <h3 class="projectname">Project name goes here</h3>
             <ul class="languages">
-                <li id="html">HTML/CSS</li>
-                <li id="ruby">Ruby on Rails</li>
-                <li id="js">JavaScript</li>
+                <li class="html">HTML/CSS</li>
+                <li class="ruby">Ruby on Rails</li>
+                <li class="js">JavaScript</li>
             </ul>
             <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
         </div>
@@ -62,9 +62,9 @@
             <img src="img/project4.png" alt="PROJECT4">
             <h3 class="projectname">Project name goes here</h3>
             <ul class="languages">
-                <li id="html">HTML/CSS</li>
-                <li id="ruby">Ruby on Rails</li>
-                <li id="js">JavaScript</li>
+                <li class="html">HTML/CSS</li>
+                <li class="ruby">Ruby on Rails</li>
+                <li class="js">JavaScript</li>
             </ul>
             <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
         </div>
@@ -72,9 +72,9 @@
             <img src="img/project5.png" alt="PROJECT5">
             <h3 class="projectname">Project name goes here</h3>
             <ul class="languages">
-                <li id="html">HTML/CSS</li>
-                <li id="ruby">Ruby on Rails</li>
-                <li id="js">JavaScript</li>
+                <li class="html">HTML/CSS</li>
+                <li class="ruby">Ruby on Rails</li>
+                <li class="js">JavaScript</li>
             </ul>
             <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
         </div>
@@ -82,15 +82,14 @@
             <img src="img/project6.png" alt="PROJECT6">
             <h3 class="projectname">Project name goes here</h3>
             <ul class="languages">
-                <li id="html">HTML/CSS</li>
-                <li id="ruby">Ruby on Rails</li>
-                <li id="js">JavaScript</li>
+                <li class="html">HTML/CSS</li>
+                <li class="ruby">Ruby on Rails</li>
+                <li class="js">JavaScript</li>
             </ul>
             <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
         </div>
     </section>
     <section class="aboutme">
-        
     </section>
 </body>
 </html>
