--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Marco Antonio Hincapié Montes</h1>
         <p>Hello! I am a software developer! I can help you build a product, feature or website. Take a look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
         <div>
-            <button id="headline-button">Start collaboration</button>
+            <button type="button" id="headline-button">Start collaboration</button>
         </div>   
     </section>
     <img class="bottomheader" src="img/shapeheader2.png" alt="Shape2">
@@ -36,7 +36,7 @@
                 <li class="ruby">Ruby on Rails</li>
                 <li class="js">JavaScript</li>
             </ul>
-            <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+            <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
         </div>
         <div class="projectdescription">
             <img src="img/project2.png" alt="PROJECT2">
@@ -46,7 +46,7 @@
                 <li class="ruby">Ruby on Rails</li>
                 <li class="js">JavaScript</li>
             </ul>
-            <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+            <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
         </div>
         <div class="projectdescription">
             <img src="img/project3.png" alt="PROJECT3">
@@ -56,7 +56,7 @@
                 <li class="ruby">Ruby on Rails</li>
                 <li class="js">JavaScript</li>
             </ul>
-            <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+            <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
         </div>
         <div class="projectdescription">
             <img src="img/project4.png" alt="PROJECT4">
@@ -66,7 +66,7 @@
                 <li class="ruby">Ruby on Rails</li>
                 <li class="js">JavaScript</li>
             </ul>
-            <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+            <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
         </div>
         <div class="projectdescription">
             <img src="img/project5.png" alt="PROJECT5">
@@ -76,7 +76,7 @@
                 <li class="ruby">Ruby on Rails</li>
                 <li class="js">JavaScript</li>
             </ul>
-            <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+            <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
         </div>
         <div class="projectdescription">
             <img src="img/project6.png" alt="PROJECT6">
@@ -86,7 +86,7 @@
                 <li class="ruby">Ruby on Rails</li>
                 <li class="js">JavaScript</li>
             </ul>
-            <button id="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+            <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
         </div>
     </section>
     <section class="aboutme">
