Setting up the about section.
-Added the structure of the about section on the html file.
-Added the style for this features with CSS grid and flexbox.
-Downloaded and added the images for the about section.
-Added the link for the fonts.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@300;400;500;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -21,9 +20,7 @@
     <section class="headline">
         <h1>Marco Antonio Hincapié Montes</h1>
         <p>Hello! I am a software developer! I can help you build a product, feature or website. Take a look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
-        <div>
-            <button type="button" id="headline-button">Start collaboration</button>
-        </div>   
+        <button type="button" class="headline-button">Start collaboration</button>  
     </section>
     <img class="bottomheader" src="img/shapeheader2.png" alt="Shape2">
     <section class="works">
@@ -90,6 +87,42 @@
         </div>
     </section>
     <section class="aboutme">
+        <section class="headline">
+            <h1>About</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod</p>
+            <button type="button" class="about-button">Get my CV<img src="img/download.png" alt="Download"></button>  
+        </section>
+        <section class="tech">
+            <div class="languages1">
+                <h4>Languages</h4>
+                <ul class="position">
+                    <li>JavaScript (ES5/ES6)</li>
+                    <li>Ruby</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                </ul>
+            </div>
+            <div class="frameworks">
+                <h4>Frameworks</h4>
+                <ul class="position">
+                    <li>Bootstrap</li>
+                    <li>Ruby on rails</li>
+                    <li>RSpec</li>
+                    <li>Capibara</li>
+                    <li>Selenium</li>
+                </ul>
+            </div>
+            <div class="skills">
+                <h4>Skills</h4>
+                <ul class="position">
+                    <li>Codekit</li>
+                    <li>Codepen</li>
+                    <li>GitHub</li>
+                    <li>GitLab</li>
+                    <li>Terminal</li>
+                </ul>
+            </div>
+        </section>
     </section>
 </body>
 </html>
