--- a/index.html
+++ b/index.html
@@ -88,41 +88,41 @@
     </section>
     <section class="aboutme">
         <section class="headline">
-            <h1>About</h1>
+            <h5>About</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod</p>
             <button type="button" class="about-button">Get my CV<img src="img/download.png" alt="Download"></button>  
         </section>
-        <section class="tech">
-            <div class="languages1">
+        <ul class="tech">
+            <li class="languages1">
                 <h4>Languages</h4>
                 <ul class="position">
-                    <li>JavaScript (ES5/ES6)</li>
-                    <li>Ruby</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
+                    <li class="item">JavaScript (ES5/ES6)</li>
+                    <li class="item">Ruby</li>
+                    <li class="item">HTML</li>
+                    <li class="item">CSS</li>
                 </ul>
-            </div>
-            <div class="frameworks">
+            </li>
+            <li class="frameworks">
                 <h4>Frameworks</h4>
                 <ul class="position">
-                    <li>Bootstrap</li>
-                    <li>Ruby on rails</li>
-                    <li>RSpec</li>
-                    <li>Capibara</li>
-                    <li>Selenium</li>
+                    <li class="item">Bootstrap</li>
+                    <li class="item">Ruby on rails</li>
+                    <li class="item">RSpec</li>
+                    <li class="item">Capibara</li>
+                    <li class="item">Selenium</li>
                 </ul>
-            </div>
-            <div class="skills">
+            </li>
+            <li class="skills">
                 <h4>Skills</h4>
                 <ul class="position">
-                    <li>Codekit</li>
-                    <li>Codepen</li>
-                    <li>GitHub</li>
-                    <li>GitLab</li>
-                    <li>Terminal</li>
+                    <li class="item">Codekit</li>
+                    <li class="item">Codepen</li>
+                    <li class="item">GitHub</li>
+                    <li class="item">GitLab</li>
+                    <li class="item">Terminal</li>
                 </ul>
-            </div>
-        </section>
+            </li>
+        </ul>
     </section>
 </body>
 </html>
