--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>Hello! I am a software developer! I can help you build a product, feature or website. Take a look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
     <button type="button" class="headline-button">Start collaboration</button>  
   </section>
-  <img class="bottomheader" src="img/shapeheader2.png" alt="Shape2">
+    <img class="bottomheader" src="img/shapeheader2.png" alt="Shape2">
   <section class="works">
     <h2 class="projecttitle">Projects</h2>
     <div class="projectdescription">
@@ -123,6 +123,16 @@
         </ul>
       </li>
     </ul>
+  </section>
+  <section class="contactform">
+    <section class="headline">
+      <a href="index.html"><img class="toolbar" src="img/shapeheader.png" alt="Shape1"></a>
+      <h5>Get Started</h5>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+    </section>
+    <form>
+      
+    </form>
   </section>
 </body>
 </html>
