Add Form labels & input, give some css to these

--- a/index.html
+++ b/index.html
@@ -130,8 +130,24 @@
       <h5>Get Started</h5>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
     </section>
-    <form>
-      
+
+    <form action="https://formspree.io/f/xgedlyrb " method="post">
+      <ul>
+        <li>
+          <label for="first_name"> Your Name</label>
+          <input type="text" id="first_name" name="user_name" placeholder="Marco Antonio">
+        </li>
+
+        <li>
+          <label for="mail"> Your Email</label>
+          <input type="email" id="mail" name="user_mail" placeholder="Marco@gmail.com">
+        </li>
+
+        <li>
+          <textarea> Enter Your message here</textarea>
+        </li>
+
+      </ul>
     </form>
   </section>
 </body>
