--- a/index.html
+++ b/index.html
@@ -130,24 +130,35 @@
       <h5>Get Started</h5>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
     </section>
-
     <form action="https://formspree.io/f/xgedlyrb " method="post">
-      <ul>
+      <ul class="submitform">
         <li>
           <label for="first_name"> Your Name</label>
-          <input type="text" id="first_name" name="user_name" placeholder="Marco Antonio">
+          <input type="text" id="first_name" name="user_name" placeholder="Marco Antonio" required>
         </li>
-
         <li>
           <label for="mail"> Your Email</label>
-          <input type="email" id="mail" name="user_mail" placeholder="Marco@gmail.com">
+          <input type="email" id="mail" name="user_mail" placeholder="example@gmail.com" required>
         </li>
-
         <li>
-          <textarea> Enter Your message here</textarea>
+          <label>Enter message here...</label>
+          <textarea name="message"></textarea required>
         </li>
-
+        <li>
+          <button type="submit" class="contact-button">Start collaboration</button>
+        </li>
       </ul>
+      <footer class="links">
+        <button type="button" class="get-resume">Get my Resume<img src="img/resume.png" alt="Resume"></button>
+        <ul class="social-network">
+          <li><img src="img/ic_stackoverflow.png" alt="ic_stackoverflow"></li>
+          <li><img src="img/ic_github.png" alt="ic_github"></li>
+          <li><img src="img/ic_twitter.png" alt="ic_twitter"></li>
+          <li><img src="img/ic_linkedin.png" alt="ic_linkedin"></li>
+          <li><img src="img/ic_medium.png" alt="ic_medium"></li>
+          <li><img src="img/icon.png" alt="icon"></li>
+        </ul>
+      </footer>
     </form>
   </section>
 </body>
