Fixed style and form issues
-Added the style to the "Get Resume" button and fixed the size.
-Added the required feature to the form items.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </li>
         <li>
           <label>Enter message here...</label>
-          <textarea name="message"></textarea required>
+          <textarea name="message" required></textarea>
         </li>
         <li>
           <button type="submit" class="contact-button">Start collaboration</button>
