Done the required changes
-Add maxlenght property to the inputs for name and textarea.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <ul class="submitform">
         <li>
           <label for="first_name"> Your Name</label>
-          <input type="text" id="first_name" name="user_name" placeholder="Marco Antonio" required>
+          <input type="text" id="first_name" name="user_name" maxlength="30" placeholder="Marco Antonio" required>
         </li>
         <li>
           <label for="mail"> Your Email</label>
@@ -142,7 +142,7 @@
         </li>
         <li>
           <label>Enter message here...</label>
-          <textarea name="message" required></textarea>
+          <textarea name="message" maxlength="500" required></textarea>
         </li>
         <li>
           <button type="submit" class="contact-button">Start collaboration</button>
