Added some mediaqueries
-Added second image to the headline.
-Added media queries to the navbar.
-Added some features from the HTML file to fix the syntax.
-Separated the style for some features.

--- a/index.html
+++ b/index.html
@@ -15,15 +15,24 @@
     <nav class="navbar">
       <a href="index.html"><img class="toolbar" src="img/shapeheader.png" alt="Shape1"></a>
       <img class="rectangle" src="img/menurectangle.png" alt="Rectangle">
+      <ul class="navbar desk">
+        <li><button type="button" class="navbutton">Hello</button></li>
+        <li><button type="button" class="navbutton">Portfolio</button></li>
+        <li><button type="button" class="navbutton">About</button></li>
+        <li><button type="button" class="navbutton">Contact</button></li>
+      </ul>
     </nav>
   </header>
   <section class="headline">
     <h1>Marco Antonio Hincapié Montes</h1>
     <p>Hello! I am a software developer! I can help you build a product, feature or website. Take a look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
-    <button type="button" class="headline-button">Start collaboration</button>  
+    <button type="button" class="headline-button">Start collaboration</button>
   </section>
+  <section class="headlineimg">
     <img class="bottomheader" src="img/shapeheader2.png" alt="Shape2">
-  <section class="works">
+    <img class="sideheader" src="img/shapeheader2.2.svg" alt="Shape2.2">
+  </section>
+    <section class="works">
     <h2 class="projecttitle">Projects</h2>
     <div class="projectdescription">
       <img src="img/project1.png" alt="PROJECT1">
@@ -126,7 +135,7 @@
   </section>
   <section class="contactform">
     <section class="headline">
-      <a href="index.html"><img class="toolbar" src="img/shapeheader.png" alt="Shape1"></a>
+      <a href="index.html"><img class="toolbar2" src="img/shapeheader.png" alt="Shape1"></a>
       <h5>Get Started</h5>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
     </section>
