Added media queries to hello section
-Added media queries style to the hello-section.
-Created the hello-section on the html file.
-Downloaded the image for the background

--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
       </ul>
     </nav>
   </header>
-  <section class="headline">
-    <h1>Marco Antonio Hincapié Montes</h1>
-    <p>Hello! I am a software developer! I can help you build a product, feature or website. Take a look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
-    <button type="button" class="headline-button">Start collaboration</button>
+  <section class="hellosection">
+    <section class="headline">
+      <h1>Marco Antonio Hincapié Montes</h1>
+      <p>Hello! I am a software developer! I can help you build a product, feature or website. Take a look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
+      <button type="button" class="headline-button">Start collaboration</button>
+    </section>
+    <section class="headlineimg">
+      <img class="bottomheader" src="img/shapeheader2.png" alt="Shape2">
+      <img class="sideheader" src="img/shapeheader2.2.svg" alt="Shape2.2">
+    </section>
   </section>
-  <section class="headlineimg">
-    <img class="bottomheader" src="img/shapeheader2.png" alt="Shape2">
-    <img class="sideheader" src="img/shapeheader2.2.svg" alt="Shape2.2">
-  </section>
-    <section class="works">
+  <section class="works">
     <h2 class="projecttitle">Projects</h2>
     <div class="projectdescription">
       <img src="img/project1.png" alt="PROJECT1">
