--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
   </section>
   <section class="aboutme">
-    <section class="headline">
+    <section class="aboutheadline">
       <h5>About</h5>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod</p>
       <button type="button" class="about-button">Get my CV<img src="img/download.png" alt="Download"></button>  
@@ -136,7 +136,7 @@
     </ul>
   </section>
   <section class="contactform">
-    <section class="headline">
+    <section class="contactheadline">
       <a href="index.html"><img class="toolbar2" src="img/shapeheader.png" alt="Shape1"></a>
       <h5>Get Started</h5>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
