Added media queries to about section.
-Added empty space to the list for completing the grid.
-Added style for desktop version at this section.
-Downloaded the background image.

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
           <li class="item">Terminal</li>
         </ul>
       </li>
+      <li class="dotsquare"></li>
     </ul>
   </section>
   <section class="contactform">
