--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@
     </section>
     <form action="https://formspree.io/f/xgedlyrb " method="post">
       <ul class="submitform">
-        <li>
+        <li class="nameform">
           <label for="first_name"> Your Name</label>
           <input type="text" id="first_name" name="user_name" maxlength="30" placeholder="Marco Antonio" required>
         </li>
-        <li>
+        <li class="mailform">
           <label for="mail"> Your Email</label>
           <input type="email" id="mail" name="user_mail" placeholder="example@gmail.com" required>
         </li>
-        <li>
+        <li class="messageform">
           <label>Enter message here...</label>
           <textarea name="message" maxlength="500" required></textarea>
         </li>
