Added media queries to the works section.
-Created new classes on the HTML file for fixing the styling issues.
-Added the media query style for the work section.
-Added the background images.

--- a/index.html
+++ b/index.html
@@ -36,66 +36,81 @@
   </section>
   <section class="works">
     <h2 class="projecttitle">Projects</h2>
-    <div class="projectdescription">
+    <div class="projectdescription a">
       <img src="img/project1.png" alt="PROJECT1">
-      <h3 class="projectname">Project name goes here</h3>
-      <ul class="languages">
-        <li class="html">HTML/CSS</li>
-        <li class="ruby">Ruby on Rails</li>
-        <li class="js">JavaScript</li>
-      </ul>
-      <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+      <div class="projectinfo1">
+        <h3 class="projectname">Project name goes here</h3>
+        <ul class="languages">
+          <li class="html">HTML/CSS</li>
+          <li class="ruby">Ruby on Rails</li>
+          <li class="js">JavaScript</li>
+        </ul>
+        <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+      </div>
     </div>
-    <div class="projectdescription">
+    <div class="projectdescription b">
       <img src="img/project2.png" alt="PROJECT2">
-      <h3 class="projectname">Project name goes here</h3>
-      <ul class="languages">
-        <li class="html">HTML/CSS</li>
-        <li class="ruby">Ruby on Rails</li>
-	      <li class="js">JavaScript</li>
-      </ul>
-      <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+      <div class="projectinfo2">
+        <h3 class="projectname">Project name goes here</h3>
+        <ul class="languages">
+          <li class="html">HTML/CSS</li>
+          <li class="ruby">Ruby on Rails</li>
+	        <li class="js">JavaScript</li>
+        </ul>
+        <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+      </div>
     </div>
-    <div class="projectdescription">
+    <div class="projectdescription c">
       <img src="img/project3.png" alt="PROJECT3">
-      <h3 class="projectname">Project name goes here</h3>
-      <ul class="languages">
-    	  <li class="html">HTML/CSS</li>
-        <li class="ruby">Ruby on Rails</li>
-        <li class="js">JavaScript</li>
-      </ul>
-      <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+      <div class="projectinfo3">
+        <h3 class="projectname">Project name goes here</h3>
+        <ul class="languages">
+      	  <li class="html">HTML/CSS</li>
+          <li class="ruby">Ruby on Rails</li>
+          <li class="js">JavaScript</li>
+        </ul>
+        <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+      </div>
     </div>
-    <div class="projectdescription">
+    <div class="projectdescription d">
       <img src="img/project4.png" alt="PROJECT4">
-      <h3 class="projectname">Project name goes here</h3>
-      <ul class="languages">
-        <li class="html">HTML/CSS</li>
-        <li class="ruby">Ruby on Rails</li>
-        <li class="js">JavaScript</li>
-      </ul>
-      <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+      <div class="projectinfo4">
+        <h3 class="projectname">Project name goes here</h3>
+        <ul class="languages">
+          <li class="html">HTML/CSS</li>
+          <li class="ruby">Ruby on Rails</li>
+          <li class="js">JavaScript</li>
+        </ul>
+        <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+      </div>
     </div>
-    <div class="projectdescription">
+    <div class="projectdescription e">
       <img src="img/project5.png" alt="PROJECT5">
-      <h3 class="projectname">Project name goes here</h3>
-      <ul class="languages">
-        <li class="html">HTML/CSS</li>
-        <li class="ruby">Ruby on Rails</li>
-        <li class="js">JavaScript</li>
-      </ul>
-      <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+      <div class="projectinfo5">
+        <h3 class="projectname">Project name goes here</h3>
+        <ul class="languages">
+          <li class="html">HTML/CSS</li>
+          <li class="ruby">Ruby on Rails</li>
+          <li class="js">JavaScript</li>
+        </ul>
+        <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+      </div>
     </div>
-    <div class="projectdescription">
+    <div class="projectdescription f">
       <img src="img/project6.png" alt="PROJECT6">
-      <h3 class="projectname">Project name goes here</h3>
-      <ul class="languages">
-        <li class="html">HTML/CSS</li>
-        <li class="ruby">Ruby on Rails</li>
-        <li class="js">JavaScript</li>
-      </ul>
-      <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+      <div class="projectinfo6">
+        <h3 class="projectname">Project name goes here</h3>
+        <ul class="languages">
+          <li class="html">HTML/CSS</li>
+          <li class="ruby">Ruby on Rails</li>
+          <li class="js">JavaScript</li>
+        </ul>
+        <button type="button" class="buttonproject">See this Project<img src="img/rightarrow.png" alt="ARROW"></button>
+      </div>
     </div>
+    <div class="background1"></div>
+    <div class="background2"></div>
+    <div class="background3"></div>
   </section>
   <section class="aboutme">
     <section class="aboutheadline">
