Fixed linter issues.
-Deleted the button feature of this links.
-Added the correct style for this.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <a href="index.html"><img class="toolbar" src="img/shapeheader.png" alt="Shape1"></a>
       <img class="rectangle" src="img/menurectangle.png" alt="Rectangle">
       <ul class="navbar desk">
-        <li><button type="button" class="navbutton"><a href="#hello">Hello</a></button></li>
-        <li><button type="button" class="navbutton"><a href="#works">Portfolio</a></button></li>
-        <li><button type="button" class="navbutton"><a href="#about">About</a></button></li>
-        <li><button type="button" class="navbutton"><a href="#contact">Contact</a></button></li>
+        <li><a class="navbutton" href="#hello">Hello</a></li>
+        <li><a class="navbutton" href="#works">Portfolio</a></li>
+        <li><a class="navbutton" href="#about">About</a></li>
+        <li><a class="navbutton" href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
