--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <ul class="submitform">
         <li class="nameform">
           <label for="first_name"> Your Name</label>
-          <input type="text" id="first_name" name="user_name" maxlength="30" placeholder="Marco Antonio" required>
+          <input type="text" id="first_name" name="user_name" maxlength="30" placeholder="First name, Last name" required>
         </li>
         <li class="mailform">
           <label for="mail"> Your Email</label>
