--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My_Portfolio</title>
+  <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
     </section>
     <section class="headlineimg">
       <img class="bottomheader" src="img/shapeheader2.png" alt="Shape2">
-      <img class="sideheader" src="img/shapeheader2.2.svg" alt="Shape2.2">
+      <img class="sideheader" src="img/shapeheader2.2.svg" alt="Shape2">
     </section>
   </section>
   <section class="works" id="portfolio">
