Modify image alternative texts for accessibility

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <header>
     <nav class="navbar">
-      <a href="index.html"><img class="toolbar" src="img/shapeheader.png" alt="Shape1"></a>
-      <img class="rectangle" src="img/menurectangle.png" alt="Rectangle">
+      <a href="index.html"><img class="toolbar" src="img/shapeheader.png" alt="Redirect Home"></a>
+      <img class="rectangle" src="img/menurectangle.png" alt="Menu">
       <ul class="navbar desk">
         <li><a class="navbutton" href="#hello">Hello</a></li>
         <li><a class="navbutton" href="#works">Portfolio</a></li>
@@ -30,8 +30,8 @@
       <button type="button" class="headline-button">Start collaboration</button>
     </section>
     <section class="headlineimg">
-      <img class="bottomheader" src="img/shapeheader2.png" alt="Shape2">
-      <img class="sideheader" src="img/shapeheader2.2.svg" alt="Shape2">
+      <img class="bottomheader" src="img/shapeheader2.png" alt="Logo">
+      <img class="sideheader" src="img/shapeheader2.2.svg" alt="Logo">
     </section>
   </section>
   <section class="works" id="portfolio">
@@ -153,7 +153,7 @@
   </section>
   <section class="contactform" id="contact">
     <section class="contactheadline">
-      <a href="index.html"><img class="toolbar2" src="img/shapeheader.png" alt="Shape1"></a>
+      <a href="index.html"><img class="toolbar2" src="img/shapeheader.png" alt="Redirect Home"></a>
       <h5>Get Started</h5>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
     </section>
@@ -180,12 +180,12 @@
   <footer class="links">
     <button type="button" class="get-resume">Get my Resume<img src="img/resume.png" alt="Resume"></button>
     <ul class="social-network">
-      <li><img src="img/ic_stackoverflow.png" alt="ic_stackoverflow"></li>
-      <li><img src="img/ic_github.png" alt="ic_github"></li>
-      <li><img src="img/ic_twitter.png" alt="ic_twitter"></li>
-      <li><img src="img/ic_linkedin.png" alt="ic_linkedin"></li>
-      <li><img src="img/ic_medium.png" alt="ic_medium"></li>
-      <li><img src="img/icon.png" alt="icon"></li>
+      <li><img src="img/ic_stackoverflow.png" alt="Stackoverflow Icon"></li>
+      <li><img src="img/ic_github.png" alt="Github Icon"></li>
+      <li><img src="img/ic_twitter.png" alt="Twitter Icon"></li>
+      <li><img src="img/ic_linkedin.png" alt="Linkedin Icon"></li>
+      <li><img src="img/ic_medium.png" alt="Medium Icon"></li>
+      <li><img src="img/icon.png" alt="Angellist Icon"></li>
       </ul>
   </footer>
 </body>
