Add links to social networks

--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
   <footer class="links">
     <button type="button" class="get-resume">Get my Resume<img src="img/resume.png" alt="Resume"></button>
     <ul class="social-network">
-      <li><img src="img/ic_stackoverflow.png" alt="Stackoverflow Icon"></li>
-      <li><img src="img/ic_github.png" alt="Github Icon"></li>
-      <li><img src="img/ic_twitter.png" alt="Twitter Icon"></li>
-      <li><img src="img/ic_linkedin.png" alt="Linkedin Icon"></li>
-      <li><img src="img/ic_medium.png" alt="Medium Icon"></li>
-      <li><img src="img/icon.png" alt="Angellist Icon"></li>
+      <li><a href="#"><img src="img/ic_stackoverflow.png" alt="Stackoverflow Icon"></a></li>
+      <li><a href="https://github.com/AntonioHincapie"><img src="img/ic_github.png" alt="Github Icon"></a></li>
+      <li><a href="https://twitter.com/MarcoHincapie"><img src="img/ic_twitter.png" alt="Twitter Icon"></a></li>
+      <li><a href="https://www.linkedin.com/in/marco-hincapi%C3%A9-7a76751a3/"><img src="img/ic_linkedin.png" alt="Linkedin Icon"></a></li>
+      <li><a href="#"><img src="img/ic_medium.png" alt="Medium Icon"></a></li>
+      <li><a href="#"><img src="img/icon.png" alt="Angellist Icon"></a></li>
       </ul>
   </footer>
 </body>
