--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </li>
         <li class="messageform">
           <label>Enter message here...</label>
-          <textarea name="message" maxlength="500" required></textarea>
+          <textarea aria-label="message" maxlength="500" required></textarea>
         </li>
         <li>
           <button type="submit" class="contact-button">Start collaboration</button>
