--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img class="rectangle" src="img/menurectangle.png" alt="Menu">
       <ul class="navbar desk">
         <li><a class="navbutton" href="#hello">Hello</a></li>
-        <li><a class="navbutton" href="#works">Portfolio</a></li>
+        <li><a class="navbutton" href="#portfolio">Portfolio</a></li>
         <li><a class="navbutton" href="#about">About</a></li>
         <li><a class="navbutton" href="#contact">Contact</a></li>
       </ul>
