Styled mobile menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <nav class="navbar">
-      <a href="index.html"><img " class="toolbar" src="img/shapeheader.png" alt="Redirect Home"></a>
+      <a href="index.html"><img class="toolbar" src="img/shapeheader.png" alt="Redirect Home"></a>
       <img id="btnmenu" class="rectangle" src="img/menurectangle.png" alt="Menu">
       <ul class="desk">
         <li><a class="navbutton" href="#hello">Hello</a></li>
@@ -22,7 +22,7 @@
         <li><a class="navbutton" href="#contact">Contact</a></li>
       </ul>
       <div id="menu">
-        <div>
+        <div class="exitbtn-container">
           <img id="exitbtn" class="exit"src="img/exit.png" alt="X">
         </div>
         <ul id="mobile-menu">
