Added the JS functionality to the mobile menu
-Create the JS file with the functions.
-Added the linters for JS.
-Modify the style and the html for improve the layout.

--- a/index.html
+++ b/index.html
@@ -199,5 +199,6 @@
       <li><a href="#"><img src="img/icon.png" alt="Angellist Icon"></a></li>
       </ul>
   </footer>
+  <script src="./script.js"></script>
 </body>
 </html>
