Created the popup-window for the mobile section.
-Added to the HTML file the popup-window section.
-Added to the CSS file the popup-window section.
-Added the images for this section.

--- a/index.html
+++ b/index.html
@@ -123,6 +123,32 @@
     <div class="background2"></div>
     <div class="background3"></div>
   </section>
+  <section class="popup-window">
+    <h2>Project name goes here</h2>
+    <ul class="languages">
+      <li class="langstyle">HTML/CSS</li>
+      <li class="langstyle">Ruby on Rails</li>
+      <li class="langstyle">JavaScript</li>
+    </ul>
+    <div class="images">
+      <div class="showimg">
+        <img class="prev" src="img/previousp.png" alt="ARROW">
+        <img class="image" src="img/project1.png" alt="PROJECT1">
+        <img class="next" src="img/nextp.png" alt="ARROW">
+      </div>
+      <div class="miniatures">
+        <img src="img/project1.png" alt="PROJECT1">
+        <img src="img/project1.png" alt="PROJECT1">
+        <img src="img/project1.png" alt="PROJECT1">
+        <img src="img/project1.png" alt="PROJECT1">
+      </div>
+    </div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.<br>Ut aliquip ex ea commodo consequat.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
+    <div class="button-container">
+      <button type="button" class="button-pop">See live<img src="img/seelive.png" alt="ARROW"></button>
+      <button type="button" class="button-pop">See source<img src="img/ic_githubdark.png" alt="GitHub"></button>
+    </div>
+  </section>
   <section class="aboutme" id="about">
     <section class="aboutheadline">
       <h1>About</h1>
