Added the exit tag

--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
     <div class="background3"></div>
   </section>
   <section class="popup-window">
+    <div class="exitbtn-container">
+      <img id="exitbtn" class="exit" src="img/exit.png" alt="X">
+    </div>
     <h2>Project name goes here</h2>
     <ul class="languages">
       <li class="langstyle">HTML/CSS</li>
