--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
     <div class="background2"></div>
     <div class="background3"></div>
   </section>
-  <section class="popup-window">
+  <section id="popup-window" class="popup-window">
     <div class="exitbtn-container">
-      <img id="exitbtn" class="exit" src="img/exit.png" alt="X">
+      <img id="popup-exitbtn" class="exit" src="img/exit.png" alt="X">
     </div>
     <h2>Project name goes here</h2>
     <ul class="languages">
