Created the data base for safe the objects data.
-Created the projectdata file for safe the objects info.
-Setting up the media query style for the popup cards.

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
       <li><a href="#"><img src="img/icon.png" alt="Angellist Icon"></a></li>
       </ul>
   </footer>
-  <script src="./script.js"></script>
+  <script type="module" src="./script.js"></script>
+  <script type="module" src="./projectdata.js"></script>
 </body>
 </html>
