--- a/index.html
+++ b/index.html
@@ -127,27 +127,24 @@
     <div class="exitbtn-container">
       <img id="popup-exitbtn" class="exit" src="img/exit.png" alt="X">
     </div>
-    <h2 id="popup-title">Project name goes here</h2>
-    <ul class="languages" id="languages">
-      <li class="langstyle">HTML/CSS</li>
-      <li class="langstyle">Ruby on Rails</li>
-      <li class="langstyle">JavaScript</li>
-    </ul>
+    <h2 id="popup-title"></h2>
+    <ul class="languages" id="languages"></ul>
     <div class="images">
       <div class="showimg">
-        <img class="prev" src="img/previousp.png" alt="ARROW">
-        <img class="image" src="img/project1.png" alt="PROJECT1" id="main-img">
-        <img class="next" src="img/nextp.png" alt="ARROW">
+        <img class="prev" id="prev" src="img/previousp.png" alt="ARROW">
+        <img class="image" id="main-img" src="img/project1.png" alt="PROJECT">
+        <img class="next" id="next" src="img/nextp.png" alt="ARROW">
       </div>
       <div class="miniatures" id="miniatures">
       </div>
     </div>
-    <p id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.<br>Ut aliquip ex ea commodo consequat.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
+    <p id="text"></p>
     <div class="button-container">
-      <button type="button" class="button-pop">See live<img src="img/seelive.png" alt="ARROW"></button>
-      <button type="button" class="button-pop">See source<img src="img/ic_githubdark.png" alt="GitHub"></button>
+      <a id="live" href="https://antoniohincapie.github.io/My_Portfolio/"><button type="button" class="button-pop">See live<img src="img/seelive.png" alt="ARROW"></button></a>
+      <a id="source" href="https://github.com/AntonioHincapie/My_Portfolio"><button type="button" class="button-pop">See source<img src="img/ic_githubdark.png" alt="GitHub"></button></a>
     </div>
   </section>
+  <div id="popup-background"></div>
   <section class="aboutme" id="about">
     <section class="aboutheadline">
       <h1>About</h1>
