Fixed linters issues

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
     </div>
     <p id="text"></p>
     <div class="button-container">
-      <a id="live" href="https://antoniohincapie.github.io/My_Portfolio/"><button type="button" class="button-pop">See live<img src="img/seelive.png" alt="ARROW"></button></a>
-      <a id="source" href="https://github.com/AntonioHincapie/My_Portfolio"><button type="button" class="button-pop">See source<img src="img/ic_githubdark.png" alt="GitHub"></button></a>
+      <button type="button" class="button-pop"><a id="live" href="https://antoniohincapie.github.io/My_Portfolio/">See live<img src="img/seelive.png" alt="ARROW"></a></button>
+      <button type="button" class="button-pop"><a id="source" href="https://github.com/AntonioHincapie/My_Portfolio">See source<img src="img/ic_githubdark.png" alt="GitHub"></a></button>
     </div>
   </section>
   <div id="popup-background"></div>
